# canisters-official

./: .gitignore  CONTEXT.txt  Cargo.toml  GOTCHAS.md  NOTES.md  README.md  REPLAYABILITY.md  TODO.md  canister_ids.json  default-readme.md  dfx.dev.json  dfx.json  dfx.prod.json  icp-testnet.click.conf.nginx-demo  package-lock.json  package.json
notes/: APP_JOBS.md  AUTH.md  FRONTEND.md  (+9 more)
src/canisters-official-backend/: Cargo.toml  canisters-official-backend.did
src/canisters-official-backend/reference_src/: lib.txt  types.rs
src/canisters-official-backend/src/: certifications.rs  lib.rs  state.rs  types.rs
src/canisters-official-backend/src/core/: mod.rs  types.rs
src/canisters-official-backend/src/core/api/: actions.rs  drive.rs  factory.rs  helpers.rs  internals.rs  mod.rs  types.rs  uuid.rs
src/canisters-official-backend/src/core/state/: mod.rs
src/canisters-official-backend/src/http/: certifications.rs  handlers.rs  mod.rs  routes.rs
src/canisters-official-backend/src/rest/: auth.rs  helpers.rs  mod.rs  router.rs  types.rs
src/canisters-official-backend/src/rest/api_keys/: handler.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/apikeys/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/contacts/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/directory/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/disks/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/drives/: certs.rs  handler.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/group_invites/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
src/canisters-official-backend/src/rest/groups/: certs.rs  handler.rs  mod.rs  route.rs  types.rs
(+175 files in other folders)
