[package]
name = "canisters-official-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
candid = "0.10.13"
ic-cdk = "0.17"
serde = "1.0.217"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
ic-http-certification = "3.0.2"
lazy_static = "1.5.0"
matchit = "0.8"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
base64 = "0.22.1"