[package]
name = "canisters-official-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
candid = "0.10.13"
ic-cdk = "0.17"
serde = "1.0.217"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
ic-http-certification = "3.0.2"
lazy_static = "1.5.0"
matchit = "0.8"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
base64 = "0.22.1"
ic-cdk-macros = "0.17.1"
hex = "0.4.3"
regex = "1.10.6"
ic-stable-structures = "0.6.7"
ciborium = "0.2.2"
urlencoding = "2.1.3"
url = "2.5.4"
hmac = "0.12.1"
time = "0.3.37"
num-traits = "0.2.19"
num-bigint = "0.4.6"
serde-diff = "0.4.1"
rmp-serde = "1.3.0"
ic-crypto-standalone-sig-verifier = { git = "https://github.com/dfinity/ic", rev = "release-2023-05-25-11-44" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "release-2023-05-25-11-44" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "release-2023-05-25-11-44" }